modified to be screen responsive

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
   <main class="main-container">
     <div class="background">
-      <img src="./images/bg-main-mobile.png" >
     </div>
     <div class="form-container">
       <form id="info-form">
@@ -44,12 +43,12 @@
         <input type="submit" value="Confirm">
       </form>
 
-      <div class="complete-container hidden">
-        <img src="./images/icon-complete.svg">
-        <span>thank you!</span>
-        <span>We've added your card details</span>
-        <button id="continue-button">continue</button>
-      </div>
+    </div>
+    <div class="complete-container hidden">
+      <img src="./images/icon-complete.svg">
+      <span>thank you!</span>
+      <span>We've added your card details</span>
+      <button id="continue-button">continue</button>
     </div>
     
 
@@ -64,19 +63,19 @@
 
       <img src="./images/bg-card-front.png" >
       <img src="./images/card-logo.svg" class="card-logo">
-      <span class="card-number">0000 0000 0000 0000</span>
+      <span class="card-number">0000000000000000</span>
       <span class="card-name">Jaber Ali</span>
       <span class="card-year">00</span>
       <span class="card-month">00</span>
 
     </div>
 
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Jaber Ali</a>.
-    </div>
   </main>
-
+  
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Jaber Ali</a>.
+  </div>
 
 
 <script src="./main.js"></script>
